# StoneEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  compile_shaders.sh  config.h.in
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/include/: Core.hpp  GlmUtilities.hpp
Engine/Core/include/Core/: Delegate.hpp  DynamicObjectFactory.hpp  Exceptions.hpp  Image.hpp  Object.hpp  Publisher.hpp  Subscriber.hpp
Engine/Core/include/Core/Assets/: Bundle.hpp  Resource.hpp
Engine/Core/include/Core/Image/: ImageAlbum.hpp  ImageData.hpp  ImageSource.hpp  ImageTypes.hpp
Engine/Core/src/: GlmUtilities.cpp
Engine/Core/src/Core/: Exceptions.cpp  Image.cpp  Object.cpp
Engine/Core/src/Core/Assets/: Bundle.cpp  Resource.cpp
Engine/Core/src/Core/Image/: ImageAlbum.cpp  ImageData.cpp  ImageSource.cpp  ImageTypes.cpp
Engine/Core/test/: test_Bundle.cpp  test_Delegate.cpp  test_Object.cpp  test_Publisher.cpp  test_Subscriber.cpp
Engine/Graphics/: CMakeLists.txt
Engine/Logging/: CMakeLists.txt
Engine/Logging/include/Logging/: TermColor.hpp
Engine/Network/: CMakeLists.txt
Engine/Network/include/: Network.hpp
Engine/Network/include/Network/: CommandExecutor.hpp  NetworkObject.hpp  NetworkSession.hpp  ObjectPool.hpp
Engine/Network/src/Network/: NetworkObject.cpp  ObjectPool.cpp
Engine/Network/test/: test_ObjectPool.cpp
Engine/Networking/: CMakeLists.txt
Engine/Physics/: CMakeLists.txt
Engine/Physics/include/: Physics.hpp
Engine/Physics/include/Physics/: Physics.hpp
Engine/Physics/src/: Collisions.cpp  Particles.cpp  Physics.cpp  library.cpp
Engine/Physics/test/: test_Collisions.cpp  test_Nothing.cpp  test_Particles.cpp
Engine/Render/: CMakeLists.txt
Engine/Render/include/: Render.hpp
Engine/Render/include/Render/: Renderer.hpp  VulkanRenderer.hpp
Engine/Render/include/Render/OpenGL/: OpenGLRenderer.hpp  RendererSettings.hpp
Engine/Render/include/Render/Vulkan/: RendererSettings.hpp  VulkanRenderer.hpp  VulkanSettings.hpp
Engine/Render/src/Render/: Renderer.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanRenderer.cpp  VulkanRendererObjectManager.hpp  VulkanRenderer_ISceneRenderer.cpp  VulkanUtilities.cpp  VulkanUtilities.hpp
Engine/Render/src/Render/OpenGL/: OpenGLRenderer.cpp  RenderContext.hpp  RendererDefaults.cpp  RendererDefaults.hpp  RendererInternals.hpp  RendererObjectManager.cpp  RendererObjectManager.hpp
Engine/Render/src/Render/Vulkan/: Device.cpp  Device.hpp  FramesRenderer.cpp  FramesRenderer.hpp  RenderContext.hpp  (+21 more)
Engine/Render/test/: test_VulkanRenderer.cpp
Engine/Render/test/OpenGL/: test_OpenGLRenderer.cpp
Engine/Render/test/Vulkan/: test_VulkanRenderer.cpp
Engine/Scene/: CMakeLists.txt
Engine/Scene/include/: Scene.hpp  SceneTypes.hpp
Engine/Scene/include/Scene/: AssetResource.hpp  AssetsManager.hpp  Camera.hpp  Geometry.hpp  IRenderElement.hpp  ISceneRenderer.hpp  Interpolator.hpp  Light.hpp  Material.hpp  Mesh.hpp  Node.hpp  NodeMacros.hpp  Pivot.hpp  RenderContext.hpp  RenderableNode.hpp  RendererObjectManager.hpp  Scene.hpp  Skeleton.hpp  SkinnedMesh.hpp  Skybox.hpp  Texture.hpp  Transform.hpp  Vertex.hpp
Engine/Scene/include/scene/: Camera.hpp  ISceneRenderer.hpp  Material.hpp  Node.hpp  NodeMacros.hpp  Pivot.hpp  Skeleton.hpp  SkinnedMesh.hpp  Skybox.hpp  Texture.hpp
Engine/Scene/src/: Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  Node.cpp  Pivot.cpp  RenderableNode.cpp  Scene.cpp  Skeleton.cpp  SkinnedMesh.cpp  Skybox.cpp  Texture.cpp  Transform.cpp
Engine/Scene/src/Scene/: AssetResource.cpp  AssetResource_AssimpLoad.cpp  AssetResource_Stone.cpp  Geometry.cpp  RenderContext.cpp  RendererObjectManager.cpp  Transform.cpp  Vertex.cpp
Engine/Scene/test/: test_Interpolator.cpp  test_Node.cpp  test_Scene.cpp  test_Transform.cpp
Engine/Sound/: CMakeLists.txt
Engine/Utils/: CMakeLists.txt
Engine/Utils/include/: Utils.hpp
Engine/Utils/include/Utils/: CurveFunction.hpp  Delegate.hpp  DispatchQueue.hpp  DynamicObjectFactory.hpp  FileSystem.hpp  Glm.hpp  Image.hpp  Json.hpp  PubSub.hpp  SigSlot.hpp  StringExt.hpp  stb_image.h
Engine/Utils/src/Utils/: DispatchQueue.cpp  FileSystem.cpp  Glm.cpp  Image.cpp  Json.cpp  StringExt.cpp  stb_image.cpp
Engine/Utils/test/: test_CurveFunction.cpp  test_Delegate.cpp  test_DispatchQueue.cpp  test_Json.cpp  test_Signal.cpp  test_Slot.cpp
Engine/Widgets/: CMakeLists.txt
Engine/Window/: CMakeLists.txt
Engine/Window/include/: Window.hpp
Engine/Window/include/Window/: App.hpp  GlfwWindow.hpp  Window.hpp  WindowSettings.hpp
Engine/Window/src/: library.cpp
Engine/Window/src/Window/: App.cpp  GlfwWindow.cpp  Window.cpp
examples/: CMakeLists.txt
examples/glHelloTriangle/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
examples/scene_usage/: CMakeLists.txt  main.cpp  test_Node.hpp
examples/scop/: CMakeLists.txt  main.cpp
stone-engine/: CMakeLists.txt
stone-engine/core/: CMakeLists.txt
stone-engine/core/include/: Core.hpp
stone-engine/core/include/core/: Object.hpp
stone-engine/core/src/: Object.cpp
stone-engine/graphics/: CMakeLists.txt
stone-engine/logging/: CMakeLists.txt
stone-engine/scene/: CMakeLists.txt
stone-engine/scene/include/: Camera.hpp  Light.hpp  Material.hpp  Mesh.hpp  Node.hpp  Node3D.hpp  Object.hpp  Pivot.hpp  RenderContext.hpp  RenderTypes.hpp  Scene.hpp  SceneTypes.hpp  Skeleton.hpp  SkinnedMesh.hpp  Skybox.hpp  Texture.hpp  Transform.hpp  Vertex.hpp  node.hpp  node3d.hpp  object.hpp  scene.hpp  transform.hpp
stone-engine/scene/include/scene/: Camera.hpp  IRenderElement.hpp  ISceneRenderingModule.hpp  Light.hpp  Material.hpp  Mesh.hpp  Node.hpp  Pivot.hpp  RenderContext.hpp  RenderableNode.hpp  Scene.hpp  Skeleton.hpp  SkinnedMesh.hpp  Skybox.hpp  Texture.hpp  Transform.hpp  Vertex.hpp
stone-engine/scene/src/: Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  Node.cpp  Node3D.cpp  Object.cpp  Pivot.cpp  RenderableNode.cpp  Scene.cpp  Skeleton.cpp  SkinnedMesh.cpp  Skybox.cpp  Texture.cpp  Transform.cpp
stone-engine/sound/: CMakeLists.txt
(+112 files in other folders)
